[gd_scene load_steps=7 format=2]

[ext_resource path="res://scn_scenes/scn_ObjectBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level_1/scr_obj_PC.gd" type="Script" id=2]
[ext_resource path="res://levels/level_1/f0_sfx_lv01/sfx_PC02.ogg" type="AudioStream" id=3]
[ext_resource path="res://levels/level_1/f0_sfx_lv01/sfx_PChumming.wav" type="AudioStream" id=4]
[ext_resource path="res://levels/level_1/f0_sfx_lv01/sfx_PCD.ogg" type="AudioStream" id=5]
[ext_resource path="res://sfx_audio/f0_sfx_pianochimes/sfx_pianochime_01_vem.wav" type="AudioStream" id=6]

[node name="obj_PC" instance=ExtResource( 1 )]
script = ExtResource( 2 )
default_noise = ""
distorted_noise_player_active = true

[node name="sfx2D_object" parent="." index="1"]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="sfx2D_distorted" parent="." index="2"]
stream = ExtResource( 5 )

[node name="sfx_discovered" parent="." index="3"]
stream = ExtResource( 6 )
pitch_scale = 0.5

[node name="AnimatedSprite" parent="." index="5"]
modulate = Color( 0.717647, 0.298039, 0.423529, 1 )
animation = "pc"

[node name="Timer" parent="." index="6"]
wait_time = 8.0

[node name="sfx2D_PCbgHumming" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 4 )
volume_db = 5.0
